examples/test/testpolicy15314.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15314
  namespace: namespace293
spec:
  podSelector:
    matchLabels:
      key35: value10
      key24: value34
      key12: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value4
      podSelector:
        matchLabels:
          key28: value19
          key16: value0
